; ModuleID = '/home/carl/AnghaBench/h2o/lib/core/extr_util.c_accept_timeout.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/core/extr_util.c_accept_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (%struct.st_h2o_accept_data_t*)* }
%struct.st_h2o_accept_data_t = type { i32* }

@accept_data_callbacks = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.st_h2o_accept_data_t*)* @accept_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @accept_timeout(%struct.st_h2o_accept_data_t* %0) #0 {
  %2 = alloca %struct.st_h2o_accept_data_t*, align 8
  %3 = alloca i32*, align 8
  store %struct.st_h2o_accept_data_t* %0, %struct.st_h2o_accept_data_t** %2, align 8
  %4 = load %struct.st_h2o_accept_data_t*, %struct.st_h2o_accept_data_t** %2, align 8
  %5 = getelementptr inbounds %struct.st_h2o_accept_data_t, %struct.st_h2o_accept_data_t* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  store i32* %6, i32** %3, align 8
  %7 = load i32 (%struct.st_h2o_accept_data_t*)*, i32 (%struct.st_h2o_accept_data_t*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @accept_data_callbacks, i32 0, i32 0), align 8
  %8 = load %struct.st_h2o_accept_data_t*, %struct.st_h2o_accept_data_t** %2, align 8
  %9 = call i32 %7(%struct.st_h2o_accept_data_t* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @h2o_socket_close(i32* %10)
  ret void
}

declare dso_local i32 @h2o_socket_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
